fix scrollbar colours not working on firefox

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,8 +9,6 @@
 
 html {
     font-size: 16px;
-    scrollbar-width: 5px;
-    scrollbar-color: var(--green);
 }
 
 body {
@@ -37,6 +35,11 @@ h4,
 h5,
 h6 {
     font-family: "Mystery Quest", system-ui;
+}
+
+* {
+    scrollbar-width: 5px;
+    scrollbar-color: var(--green);
 }
 
 ::-webkit-scrollbar,
